@startuml

title __INMEMORYJAVACOMPILER's Class Diagram__\n

  package org.mdkt.compiler {
    class CompilationException {
    }
  }
  

  package org.mdkt.compiler {
    class CompiledCode {
    }
  }
  

  package org.mdkt.compiler {
    class DynamicClassLoader {
    }
  }
  

  package org.mdkt.compiler {
    class ExtendedStandardJavaFileManager {
    }
  }
  

  package org.mdkt.compiler {
    class InMemoryJavaCompiler {
    }
  }
  

  package org.mdkt.compiler {
    class SourceCode {
    }
  }
  

  CompiledCode -up-|> SimpleJavaFileObject
  ExtendedStandardJavaFileManager -up-|> ForwardingJavaFileManager
  ExtendedStandardJavaFileManager o-- DynamicClassLoader : cl
  InMemoryJavaCompiler o-- DynamicClassLoader : classLoader
  SourceCode -up-|> SimpleJavaFileObject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
